--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
 prost = "0.13"
-snap = "1.0"
+prost-types = "0.13"
 
 [build-dependencies]
 prost-build = "0.13.3"
